@@ -1,4 +1,4 @@
-# Copyright (C) 2008, 2009, 2012 EPITA Research and Development
+# Copyright (C) 2008, 2009, 2010, 2012 EPITA Research and Development
 # Laboratory (LRDE).
 #
 # This file is part of Olena.
@@ -33,7 +33,8 @@ meta_wrappers =					\
   morpho.ixx					\
   pgm.ixx					\
   println.ixx					\
-  python-utils.ixx
+  python-utils.ixx				\
+  rgb.ixx
 
 # Wrappers (generating actual modules).
 wrappers =					\
